--- a/requirements.txt
+++ b/requirements.txt
@@ -1,239 +1,16 @@
-autogluon==1.1.1
-autogluon.common==1.1.1
-autogluon.core==1.1.1
-autogluon.features==1.1.1
-autogluon.multimodal==1.1.1
-autogluon.tabular==1.1.1
-autogluon.timeseries==1.1.1
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.2
-blis==0.7.11
-boto3==1.34.160
-botocore==1.34.160
-Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
-cachetools==5.4.0
-catalogue==2.0.10
-catboost==1.2.5
-category-encoders==2.6.3
-certifi @ file:///C:/b/abs_55jxithrm3/croot/certifi_1717618077850/work/certifi
-cffi @ file:///C:/b/abs_78eb1_vq6z/croot/cffi_1714483206096/work
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.18.1
-cloudpickle==3.0.0
-coloredlogs==15.0.1
-colorful==0.5.6
-confection==0.1.5
-contourpy==1.2.1
-cycler==0.12.1
-cymem==2.0.8
-Cython==3.0.10
-dash==2.17.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-datasets==2.20.0
-defusedxml==0.7.1
-Deprecated==1.2.14
-deprecation==2.1.0
-dill==0.3.8
-distlib==0.3.8
-distro==1.9.0
-et-xmlfile==1.1.0
-evaluate==0.4.2
-fastai==2.7.16
-fastcore==1.5.55
-fastdownload==0.0.7
-fastjsonschema==2.19.1
-fastprogress==1.0.3
-filelock @ file:///C:/b/abs_f2gie28u58/croot/filelock_1700591233643/work
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.53.0
-frozenlist==1.4.1
-fsspec @ file:///C:/b/abs_d5jzmndkba/croot/fsspec_1714461594761/work
-future==1.0.0
-gast==0.6.0
-gdown==5.2.0
-gitdb==4.0.11
-GitPython==3.1.43
-gluonts==0.15.1
-gmpy2 @ file:///C:/ci/gmpy2_1645438895476/work
-google-api-core==2.19.1
-google-auth==2.33.0
-google-pasta==0.2.0
-googleapis-common-protos==1.63.2
-graphviz==0.20.3
-grpcio @ file:///C:/b/abs_44l0c9dt0j/croot/grpc-suite_1701983675784/work
-h11==0.14.0
-h5py==3.11.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.23.4
-humanfriendly==10.0
-hyperopt==0.2.7
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
-imageio==2.35.0
-imbalanced-learn==0.12.3
-intel-openmp==2021.4.0
-ipykernel @ file:///D:/bld/ipykernel_1708996677248/work
-ipython @ file:///D:/bld/ipython_1717182928131/work
-ipywidgets==8.1.3
-itsdangerous==2.2.0
-Jinja2 @ file:///C:/b/abs_92fccttino/croot/jinja2_1716993447201/work
-jiter==0.5.0
-jmespath==1.0.1
-joblib==1.4.2
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyterlab_widgets==3.0.11
-kaggle==1.6.14
-kaleido==0.2.1
-keras==3.4.1
-kiwisolver==1.4.5
-langcodes==3.4.0
-language_data==1.2.0
-lazy_loader==0.4
-libclang==18.1.1
-lightgbm==4.3.0
-lightning==2.3.3
-lightning-utilities==0.11.6
-llvmlite==0.42.0
-marisa-trie==1.2.0
-markdown-it-py==3.0.0
-matplotlib==3.9.0
-mdurl==0.1.2
-mkl==2021.4.0
-mkl-service==2.4.0
-ml-dtypes==0.3.2
-mlforecast==0.10.0
-model-index==0.1.11
-msgpack==1.0.8
-multidict==6.0.5
-multiprocess==0.70.16
-murmurhash==1.0.10
-namex==0.0.8
-narwhals==1.8.1
-nbformat==5.10.4
-nlpaug==1.1.11
-nltk==3.8.2
-nptyping==2.4.1
-numba==0.59.1
-numpy==1.24.4
-nvidia-ml-py3==7.352.0
-omegaconf==2.2.3
-onnx==1.16.2
-onnxruntime==1.18.1
-openai==1.40.6
-opencensus==0.11.4
-opencensus-context==0.1.3
-opendatalab==0.0.10
-openmim==0.3.9
-openpyxl==3.1.5
-openxlab==0.0.11
-opt-einsum==3.3.0
-optimum==1.18.1
-optree==0.12.1
-ordered-set==4.1.0
-orjson==3.10.3
-pandas==2.2.2
-patsy==0.5.6
-pdf2image==1.17.0
-plotly==5.22.0
-plotly-resampler==0.10.0
-pmdarima==2.0.4
-preshed==3.0.9
-prometheus_client==0.20.0
-proto-plus==1.24.0
-py-spy==0.3.14
-py4j==0.10.9.7
-pyarrow==16.1.0
-pyarrow-hotfix==0.6
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycaret==3.0.0
-pycryptodome==3.20.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-pyod==2.0.0
-pyparsing==3.1.2
-pyreadline3==3.4.1
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-pytesseract==0.3.10
-python-slugify==8.0.4
-pytorch-lightning==2.3.3
-pytorch-metric-learning==2.3.0
-pytz==2024.1
-PyWavelets==1.7.0
-pywin32==306
-PyYAML==6.0.1
-ray==2.10.0
-referencing==0.35.1
-regex==2024.7.24
-retrying==1.3.4
-rich==13.7.1
-rpds-py==0.18.1
-rsa==4.9
-s3transfer==0.10.2
-safetensors==0.4.4
-schemdraw==0.19
-scikit-image==0.20.0
-scikit-learn==1.4.0
-scikit-plot==0.3.7
-scipy==1.12.0
-sentencepiece==0.2.0
-seqeval==1.2.2
-shellingham==1.5.4
-sktime==0.17.1
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-statsforecast==1.4.0
-statsmodels==0.14.2
-streamlit==1.38.0
-sympy==1.12.1
-tabulate==0.9.0
-tbats==1.1.3
-tbb==2021.12.0
-tenacity==8.3.0
-tensorboardX==2.6.2.2
-tensorflow-intel==2.16.2
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-text-unidecode==1.3
-thinc==8.2.5
-threadpoolctl==3.5.0
-tifffile==2024.8.10
-timm==0.9.16
-tokenizers==0.15.2
-toml==0.10.2
-toolz==0.12.1
-torch==2.3.0
-torchmetrics==1.2.1
-torchvision==0.18.0
-tornado @ file:///D:/bld/tornado_1708363274019/work
-tqdm==4.66.4
-transformers==4.39.3
-tsdownsample==0.1.3
-typer==0.12.3
-tzdata==2024.1
-utilsforecast==0.0.10
-virtualenv==20.26.3
-wasabi==1.1.3
-watchdog==4.0.2
-weasel==0.4.1
-webencodings==0.5.1
-widgetsnbextension==4.0.11
-window_ops==0.0.15
-wrapt==1.16.0
-xgboost==2.0.3
-xxhash==3.4.1
-yarl==1.9.4
-yellowbrick==1.5
+# Core packages
+streamlit==1.25.0
+pandas==1.5.3
+numpy==1.23.5
+scipy==1.10.1
+scikit-learn==1.1.3
+
+# OpenAI API
+openai==0.27.8
+
+# Excel writing
+openpyxl==3.1.2
+
+# AutoGluon packages
+autogluon.core==0.8.2
+autogluon.tabular[all]==0.8.2
