--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 # Core packages
-streamlit==1.25.0
+streamlit==1.38.0
 pandas==1.5.3
 numpy==1.23.5
 scipy==1.10.1
 scikit-learn==1.1.3
 
 # OpenAI API
-openai==0.27.8
+openai==1.40.6
 
 # Excel writing
-openpyxl==3.1.2
+openpyxl==3.1.5
 
 # AutoGluon packages
-autogluon.core==0.8.2
-autogluon.tabular[all]==0.8.2
+autogluon==1.1.1
+autogluon.common==1.1.1
+autogluon.core==1.1.1
+autogluon.features==1.1.1
+autogluon.multimodal==1.1.1
+autogluon.tabular==1.1.1
+autogluon.timeseries==1.1.1
