--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-streamlit==1.38.0
-
-# OpenAI API
-openai==1.40.6
-
-# Excel writing
-openpyxl==3.1.5
-
-# AutoGluon packages
-autogluon==1.1.1
-autogluon.common==1.1.1
-autogluon.core==1.1.1
-autogluon.features==1.1.1
-autogluon.multimodal==1.1.1
-autogluon.tabular==1.1.1
-autogluon.timeseries==1.1.1
+streamlit
+openai
+openpyxl
+autogluon
